--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -258,12 +258,55 @@
   tag = abbr
 }
 
+\DeclareAcronym{top}{
+  short = \tsc{top} ,
+  long  = topic ,
+  tag = abbr
+}
+
+\DeclareAcronym{ss}{
+  short = \tsc{ss} ,
+  long  = same subject ,
+  tag = abbr
+}
+
+\DeclareAcronym{tr}{
+  short = \tsc{tr} ,
+  long  = transitional sound ,
+  tag = abbr
+}
+
+\DeclareAcronym{conn}{
+  short = \tsc{conn} ,
+  long  = connective ,
+  tag = abbr
+}
+
+\DeclareAcronym{dur}{
+  short = \tsc{dur} ,
+  long  = durative ,
+  tag = abbr
+}
+
+\DeclareAcronym{nf}{
+  short = \tsc{nf} ,
+  long  = non-future ,
+  tag = abbr
+}
+
+\DeclareAcronym{pred}{
+  short = \tsc{pred} ,
+  long  = predicative ,
+  tag = abbr
+}
+
+
+
 %%%texts%%%
 
 \DeclareAcronym{col}{
   short = Col. ,
   long  = {Colossians, New Testament} ,
-  % cite =  bergsma2019 ,
   tag = texts
 }
 
