--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -607,3 +607,14 @@
   year={1993},
   publisher={Dept. of Linguistics, Research School of Pacific Studies, The Australian National University}
 }
+
+@article{erlewine2016,
+  title={Unifying Japanese relative clauses: copy-chains and context-sensitivity},
+  author={Erlewine, Michael Yoshitaka and Gould, Isaac},
+  journal={Glossa: a journal of general linguistics},
+  volume={1},
+  number={1},
+  year={2016},
+  publisher={Ubiquity Press},
+  doi={10.5334/gjgl.174}
+}
