--- a/thesis.tex
+++ b/thesis.tex
@@ -37,13 +37,18 @@ Fenna Bergsma\\
 \vspace{1em}
 aus\\
 \vspace{1em}
-Boarnsterhim, Die Niederlande\\
+Boarnsterhim, Niederlande\\
 
 \vspace{3em}
 
 2020
 
 \end{titlingpage}
+
+\clearpage
+\chapter*[Acknowledgements]{Acknowledgements}
+
+thanks
 
 \clearpage
 \tableofcontents
