--- a/discussion.tex
+++ b/discussion.tex
@@ -2,26 +2,48 @@
 
 \chapter{Discussion}\label{ch:discussion}
 
+\section{Optionality}
+
+The deletion in Old High German is optional. You can also have two light heads.
+
+\exg. Innan dhiu dher quhimit, dher chisendit uuirdhit\\
+bis dass der.MASC.SG.NOM kommen.IND.PRES.SG.3  der.MASC.SG.NOM senden,schicken werden.IND.PRES.SG.3\\
+`' \flushfill{Old High German, \ac{isid}}
+
+\exg. eno	nist	thiz	thér	then	ir	suochet	zi	arslahanne	?\\
+ etwa, nun; wohl; nicht wahr	nicht	sein	dieser, diese, dieses	der, die, das	der, die, das, wer, was	ihr	suchen	zu	erschlagen, töten\\
+ `'
+
+The deletion in Modern German is not optional, but obligatory. The reason for that is that the weak demonstrative is phonologically(?) not heavy enough to be the head of a relative clause. Maybe not only phonologically, because \tit{vom} also does not work..
+
+are free relatives restrictive or non-restrictive? > restrictive, and restrictive and weak are incompatible :)  >> this is why we have deletion!
+
+\ex. Sie ist vom Mann, mit dem sie gestern ausgegangen ist, versetzt worden.
+
+
+Polish only allows the deletion of the light head in the matching situation. It is not obligatory there, you can just as well have a light-headed relative. The deletion is possible, because you have two elements that are pretty similar?
+
+\exg. Jan czyta to, co Maria czyta.\\
+ Jan read this what Maria reads\\
+ `Jan reads what Maria reads.' \flushfill{Polish, \pgcitealt{citko2004}{96}}
+
+
 \section{Diachronic part}
 
 First, German only had the d-pronoun and attraction. The pattern of attraction that came with that pronoun is ext only.
 At some point, German invented the wh-pronoun. Helmut showed how it emerged. With that came the other pattern: int only. Some people lost the attraction (but everybody kept the d-pronoun) and with that the pattern disappeared.
 So the patterns in headless relatives follow from the relative pronouns in the language.
 
-\section{D also in Modern German}
+Why are all languages of the `matching' type dead languages?
+Was it a common thing that wh-pronouns were not used as relative pronouns?
 
 Wouldn't we now not expect that Modern German patterns with Old High German wrt attraction in headed constructions. Yes, we would. And yes, this is exactly what we see. Paper by Bader on case attraction.
 
 First there was only the relative pronoun with a D. Then we did case competition with this one, in both directions. Later, we only did it with the wh, and we only had internal left. Because this competitor was introduced, the case competition with D disappeared.
 
+Eric Fuß with definite readings of d-relatives etc.
+
 \section{Why \tsc{fem} does not have \tsc{wh}-pronouns}
-
-\section{Relativization in general}
-
-two features: topic and relativization
-topic = the movement
-relativization = the morpheme
-some languages have both, so it has be at least two features
 
 
 Another language that only allows the internal case to surface after it wins the case competition.
