--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -618,3 +618,20 @@
   publisher={Ubiquity Press},
   doi={10.5334/gjgl.174}
 }
+
+@article{citko2004,
+  title={On headed, headless, and light-headed relatives},
+  author={Citko, Barbara},
+  journal={Natural Language \& Linguistic Theory},
+  volume={22},
+  number={1},
+  pages={95--126},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{schwarz2009,
+  title={Two types of definites in natural language},
+  author={Schwarz, Florian},
+  year={2009}
+}
